# xethhung12_tg_msg

./: README.md  azure-pipelines.yml  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/xethhung12_tg_msg/: __init__.py  __main__.py  msg.py
src/xethhung12_tg_msg_send/: __main__.py
