[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "xethhung12_tg_msg"
version = "0.0.3"
description = "A small program for sending telegram message in quick"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [ "requests>=2.31.0",]
[[project.authors]]
name = "Xeth Hung"
email = "admin@xethh.me"

[project.urls]
Homepage = "https://github.com/xh-dev/xethhung12_tg_msg"
"Bug Tracker" = "https://github.com/xh-dev/xethhung12_tg_msg/issues"
